--- a/index.html
+++ b/index.html
@@ -18,13 +18,43 @@
           <a href="#Attractions">Attractions</a>
         </li>
         <li>
-          <a href="#Hotels">Hotels</a>
+          <a href="#Restaurants">Restaurants</a>
         </li>
         <li>
-          <a href="#Restaurants">Restaurants</a>
+          <a href="#About-Us">About Us</a>
         </li>
       </ul>
     </header>
+
+    <div class="container">
+      <div class="row navbar">
+        <div class="col-12 text center">
+          <h1>Weather Dashboard</h1>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-3 pb-2 pt-3" id="search">
+        <div class="row">
+          <div class="col-12">
+            <h4>Search for a City:</h4>
+          </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+              <form id="searchForm" class="input-group">
+                <input id="enterCity" placeholder="Search" name="search">
+                <button type="submit"></button>
+                </form>
+        <div id="currentWeather" class="col-9 pb-4 pt-4">
+          <div class="row pb-3 mr-2 ml-2">
+            <div id="cityInfo" class="col-12 border rounded px-3 py-3">
+              <h2>Current City</h2>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <script src=""></script>
   </body>
