--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.7.4/dist/css/foundation.min.css" crossorigin="anonymous">
     <title>Getaway from the GTA</title>
 
     <link rel="stylesheet" href="style.css">
@@ -87,7 +88,13 @@
         <h4>Made by TeamGTA ☺</h4>
         <p>&copy; Have a Safe Trip</p>
       </div>
-</body>
+      <script src="https://cdn.jsdelivr.net/npm/foundation-sites@6.7.4/dist/js/foundation.min.js" crossorigin="anonymous"></script>
+      <script src="assets/js/script.js"></script>
+      <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD-Ash0O1gw112gFDHbdCm-eloaQPi7pNk&callback=initAutocomplete&libraries=places&v=weekly"
+      async
+      ></script> 
+    </body>
 </html>  
 
   
