Google Search Cities and Weather API

--- a/index.html
+++ b/index.html
@@ -6,15 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Getaway from the GTA</title>
-
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
   <header>
     <nav class="top_nav">
 
-      <img src="logo/PHOTO-2022-03-31-20-16-27.jpg" alt="Logo" class="avatar">
+      <img src="assets/logo/PHOTO-2022-03-31-20-16-27.jpg" alt="Logo" class="avatar">
       <h1>  Getaway From GTA</h1>
       <ul>
         <li><a href="#weather">Weather</a></li>
@@ -53,17 +52,17 @@
     <div class="middle_center_bar">
       <div class="row">
         <div class="column">
-          <img src="weather pic/weather image.webp" alt="Snow" style="width:90%">
+          <img src="assets/weather pic/weather image.webp" alt="Snow" style="width:90%">
           <h2>Weather</h2>
           <p>Check the weather before heading out!</p>
         </div>
         <div class="column">
-          <img src="weather pic/weather image.webp" alt="Snow" style="width:90%">
+          <img src="assets/weather pic/weather image.webp" alt="Snow" style="width:90%">
           <h2>Attractions</h2>
           <p>Places to visit around you.</p>
         </div>
         <div class="column">
-          <img src="weather pic/weather image.webp" alt="Snow" style="width:90%">
+          <img src="assets/weather pic/weather image.webp" alt="Snow" style="width:90%">
           <h2>Restaurants</h2>
           <p>Places to fill your stomach.</p>
         </div>
@@ -76,17 +75,22 @@
 
     <div class="bottom_left">
       <h4>Resturants</h4>
-      <img src="weather pic/weather image.webp" alt="Snow" style="width:90%">
+      <img src="assets/weather pic/weather image.webp" alt="Snow" style="width:90%">
     </div>
     <div class="right_left">
       <h4>Resturants</h4>
-      <img src="weather pic/weather image.webp" alt="Snow" style="width:90%">
+      <img src="assets/weather pic/weather image.webp" alt="Snow" style="width:90%">
     </div>
 
       <div class="footer">
         <h4>Made by TeamGTA ☺</h4>
         <p>&copy; Have a Safe Trip</p>
       </div>
+<script src="assets/js/script.js"></script>
+<script
+src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD-Ash0O1gw112gFDHbdCm-eloaQPi7pNk&callback=initAutocomplete&libraries=places&v=weekly"
+async
+></script> 
 </body>
 </html>  
 
