--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
       <nav class="top_nav">
         <img
-          src="assets/logo/PHOTO-2022-03-31-20-16-27.jpg"
+          src="./assets/logo/logo.jpg"
           alt="Logo"
           class="avatar"
         />
@@ -34,14 +34,13 @@
           <label>
             Date of Travel:
             <input type="date" name="arrive" />
-            <button type="submit"></button>
           </label>
           <br />
           <label>
             Date of Leaving:
             <input type="date" name="depart" />
           </label>
-          <button type="submit"></button>
+          <button type="submit">Enter</button>
         </form>
       </div>
     </div>
@@ -67,7 +66,7 @@
               target="_blank"
               href="https://www.cometoparis.com/paris-guide/what-to-do-in-paris-s938"
             >
-              <img src="./assets/Cities/Paris.jpg" alt="Paris">
+              <img src="./assets/img/Paris.jpg" alt="Paris">
             </a>
             <div class="desc">Paris, city of love and romance.</div>
           </div>
@@ -76,7 +75,7 @@
         <div class="responsive">
           <div class="gallery">
             <a target="_blank" href="https://www.britannica.com/place/Rome">
-              <img src="./assets/Cities/Rome.jpg" alt="Rome" >
+              <img src="./assets/img/Rome.jpg" alt="Rome" >
             </a>
             <div class="desc">Rome, famous for the Colosseum.</div>
           </div>
@@ -85,7 +84,7 @@
         <div class="responsive">
           <div class="gallery">
             <a target="_blank" href="https://www.britannica.com/place/New-York-state">
-              <img src="./assets/Cities/New York.jpg" alt="New York City" >
+              <img src="./assets/img/New York.jpg" alt="New York City" >
             </a>
             <div class="desc">New York, a city that never sleeps.</div>
           </div>
@@ -94,7 +93,7 @@
         <div class="responsive">
           <div class="gallery">
             <a target="_blank" href="https://www.britannica.com/place/Peru">
-              <img src="./assets/Cities/Peru.jpg" alt="Peru">
+              <img src="./assets/img/Peru.jpg" alt="Peru">
             </a>
             <div class="desc">Peru, famous for Machu Picchu.</div>
           </div>
@@ -103,7 +102,7 @@
         <div class="responsive">
           <div class="gallery">
             <a target="_blank" href="https://www.visitgreece.gr/mainland/attica/athens/">
-              <img src="./assets/Cities/Athens.webp" alt="Athens">
+              <img src="./assets/img/Athens.webp" alt="Athens">
             </a>
             <div class="desc">Athens, the largest of the Greek city-states.</div>
           </div>
@@ -112,12 +111,13 @@
         <div class="responsive">
           <div class="gallery">
             <a target="_blank" href="https://www.countryreports.org/country/India.htm">
-              <img src="./assets/Cities/India.jpg" alt="India">
+              <img src="./assets/img/India.jpg" alt="India">
             </a>
             <div class="desc">India, known for many Iconic Monuments such as Taj Mahal.</div>
           </div>
         </div>
       </section>
+      
 
           <!-- <h2>Attractions</h2>
           <p>Places to visit around you.</p>
@@ -135,17 +135,9 @@
     </div>
     <div class="visit_time">
       <p>Best time to visit.</p>
-    </div>
-
-    </div>
-    <div class="right_left">
-      <h4>Resturants</h4>
-      <img
-        src=""
-        alt=""
-        style="width: 90%"
-      />
     </div> -->
+
+    
     <footer class="footer">
       <h4>Made by TeamGTA ☺</h4>
       <p>&copy; Have a Safe Trip</p>
