changed header & button

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 <p>Places to visit around you.</p>
                 <div id="info" class="alert alert-primary"></div>
                 <nav class="text-center next">
-                    <button id="next_button" type="button" class="btn btn-primary" style="visibility: visible;">Next (10 of 62)</button>
+                    <!-- <button id="next_button" type="button" class="btn btn-primary" style="visibility: visible;">Next (10 of 62)</button> -->
                 </nav>
                 <div class="flex-container">
                     <div id="list" class="list-group"></div>
