Fixed static display issue

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 </nav>
                 <div class="flex-container">
                     <div id="list" class="list-group"></div>
-                    <div class="poi-description">
+                    <div class="poi-description" id="place_description">
                         <div id="poi" class="alert"></div>
                     </div>
                 </div>
